# sklearn-wrap

./: .copier-answers.yml  .git-cliff.toml  .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  justfile  mkdocs.yml  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: changelog.yml  nightly.yml  pr-title.yml  publish-release.yml  tests.yml
docs/: hooks.py  index.md
docs/material/overrides/: main.html
docs/pages/: api-reference.md  contributing.md  examples.md  getting-started.md  user-guide.md
docs/stylesheets/: readthedocs.css  theme.css
examples/: first_wrapper.py  fit_context.py  grid_search.py  gridsearch.py  nested_wrappers.py  parameter_interface.py  serialization.py  validation.py  xgboost.py  xgboost_wrapper.py
src/sklearn_wrap/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_base_core.py  test_base_params.py  test_base_sklearn_compat.py  test_edge_cases.py  test_examples.py  test_fit_context.py  test_integration.py  test_serialization.py
